force-app/main/default/objects/Cloudrop__MassMailer_Display_Condition__c/Cloudrop__MassMailer_Display_Condition__c.object-meta.xml
<CustomObject>
    <label>MassMailer Display Condition</label>
    <nameField>
        <label>MassMailer Display Condition API Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MassMailer Display Conditions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>