force-app/main/default/objects/Cloudrop__MassMailer_Display_Condition__c/fields/Cloudrop__Description__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>