force-app/main/default/objects/Cloudrop__MassMailer_Display_Condition__c/fields/Cloudrop__Filter_Wrapper__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Filter_Wrapper__c</fullName>
    <label>Filter Wrapper</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>