force-app/main/default/objects/Cloudrop__MassMailer_Display_Condition__c/fields/Cloudrop__MassMailer_Display_Condition_Name__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__MassMailer_Display_Condition_Name__c</fullName>
    <label>MassMailer Display Condition Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>