force-app/main/default/objects/Cloudrop__MassMailer_Display_Condition__c/fields/Cloudrop__Primary_Object__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Primary_Object__c</fullName>
    <label>Primary Object</label>
    <length>255</length>
    <type>Text</type>
</CustomField>