force-app/main/default/objects/Cloudrop__MassMailer_Display_Condition__c/fields/Cloudrop__Query__c.field-meta.xml
<CustomField>
    <fullName>Cloudrop__Query__c</fullName>
    <label>Query</label>
    <type>TextArea</type>
</CustomField>